--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,6 +1,57 @@
-.head{
-    background-image: linear-gradient(to left, #084298, #0d6efde6);
+body {
+    padding-top: 3.5rem;
+    padding-bottom: 3rem;
+    color: #5a5a5a;
 }
-header .text-decoration-none img{
+
+header .fixed-top {
+    background-image: linear-gradient(to left, #074eb8, #0d6efde6);
+}
+
+header .text-decoration-none img {
     max-width: 50px;
+}
+
+main .section--color05 {
+    background-color: #243a5e;
+    color: white;
+    height: 280px;
+    
+}
+
+main .section--color05 .row--middled-small {
+    align-items: center;
+    display: flex;
+}
+
+.section--color05 .row {
+    max-width: 1310px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+main .section--color05 .row .medium-6 {
+    width: 50%;
+}
+
+main .section--color05 .row img {
+    width: 50%;
+    height: 280px;
+    padding: 30px;
+}
+
+main .carousel-inner .carousel-item {
+    position: relative;
+}
+
+main .carousel-inner .carousel-item .item-number{
+    position: absolute;
+    bottom: 40%;
+    left: 15%;
+    color: #fff;
+    padding: 3px 5px;
+    border-radius: 3px;
+    font-size: .9rem;
+    pointer-events: none;
+    font-size: 50px;
 }
