--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -79,3 +79,36 @@ main .carousel-inner .carousel-item .item-number{
     width: 1.5rem !important;
     height: 1.5rem !important;
 }
+
+.user-panel {
+    float: right;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.user-panel .image {
+    display: inline-block;
+    padding-left: 0.8rem;
+}
+
+.user-panel img {
+    height: auto;
+    width: 2.1rem;
+}
+
+.elevation-2 {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+}
+
+.img-circle {
+    border-radius: 50%;
+}
+
+.user-panel .info {
+    display: inline-block;
+    padding: 5px 5px 5px 10px;
+    overflow: hidden;
+    white-space: nowrap;
+}
