--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -2,6 +2,9 @@ body {
     background: #384047;
     font-family: sans-serif;
     font-size: 10px;
+    background: url(https://images.pexels.com/photos/1103970/pexels-photo-1103970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1) no-repeat;
+    background-size: cover;
+    zoom: 0.9;
   }
   
   form {
