--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,7 +1,18 @@
 body {
     padding-top: 5.1rem;
     color: #5a5a5a;
+    zoom: 0.9;
 }
+
+h2, h3 {
+    font-weight: 400!important;
+    color: #0e7f74;
+}
+
+p {
+    font-size: 18px;
+}
+
 
 header .fixed-top {
     background-image: linear-gradient(to left, #074eb8, #0d6efde6);
@@ -133,4 +144,8 @@ main .carousel-inner .carousel-item .item-number{
     height: 30px;
     display: -webkit-box;
     -webkit-box-orient: vertical;    
+}
+
+.comparison-font > svg {
+    scale: 1.2;
 }
