--- a/public/assets/css/my_project.css
+++ b/public/assets/css/my_project.css
@@ -91,3 +91,12 @@ ul.bread-crumb li a span {
 .businessContainer:hover {
     background-color: #f8fafd;
 }
+
+.name-project {
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    width: 135px;
+}
